# HUBB-MDS-Parser

./: Makefile  Makefile.am  Makefile.in  README.md  S&Pweights.txt  arcareader.c  arcareader.h  batsreader.c  batsreader.h  calcengine.c  calcengine.h  errormanager.c  errormanager.h  gidsreader.c  gidsreader.h  global.c  global.h  itchreader.c  itchreader.h  main.c  main.h  queue.c  queue.h  readquotes.c  readquotes.h  socketengine.c  stock.list  swapendian.c  swapendian.h  volume.c  volume.h
